style(nav): Add styles matching theme and fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,15 +10,16 @@ body {
 
 nav {
   width: 100%;
-  background-color: azure;
-  padding: 0.75rem;
+  background-color: #14121b;
+  border-bottom: 1px solid #e8b920;
+  padding: 0.9rem 0;
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 0.825rem;
 }
 
 nav button {
-  padding: 0.5rem 1rem;
+  padding: 0.45rem 0.7rem;
   background-color: #14121b;
   color: #e8b920;
   border: 2px solid #e8b920;
@@ -26,10 +27,10 @@ nav button {
   text-transform: uppercase;
   text-align: center;
   font-weight: bold;
-  font-size: 0.975rem;
+  font-size: 0.95rem;
   letter-spacing: 1px;
   cursor: pointer;
-  min-width: 120px;
+  min-width: 115px;
   transition: 300ms all ease-in-out;
 }
 
@@ -50,7 +51,7 @@ nav button:hover {
 }
 
 .home-logo {
-  width: min(50vw, 400px);
+  width: min(60vw, 400px);
 }
 
 .home-headline {
